@@ -1,6 +1,6 @@
 <dotnetnuke type="Package" version="5.0">
   <packages>
-    <package name="DnnC.Skins.DnnBootster" type="Skin" version="01.00.02">
+    <package name="DnnC.Skins.DnnBootster" type="Skin" version="01.00.03">
       <friendlyName>DnnBootster</friendlyName>
       <description>A responsive DNN skin using Bootstrap v3.3.6. Requires installation via the Host/Extensions page.</description>
       <owner>
