@@ -6,6 +6,13 @@
 <hr/>
 	<h3>About the DnnBootster Theme</h3>
 
+	<h4>Version 01.00.03</h4><br />
+	Small change
+	<h5>Added</h5>
+	<ul>
+			<li>Improved the functionality of the standard Bootstrap slider, added swipe functionality</li>
+	</ul>
+
 	<h4>Version 01.00.02</h4><br />
 	Small changes
 	<h5>Added</h5>
